--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "dependencies": {
     "hubot": "^2.12.0",
     "hubot-diagnostics": "0.0.1",
+    "hubot-github-repo-event-notifier": ">= 0.0.0",
     "hubot-help": "^0.1.1",
     "hubot-heroku-keepalive": "0.0.4",
+    "hubot-hipchat": "~2.5.1-5",
     "hubot-irc": "^0.2.7",
     "hubot-redis-brain": "0.0.2",
     "hubot-rules": "^0.1.0",
     "hubot-scripts": "^2.5.16",
-    "hubot-github-repo-event-notifier": ">= 0.0.0",
-    "hubot-hipchat": "~2.5.1-5"
+    "request": "^2.56.0"
   },
   "engines": {
     "node": "0.10.x"
