--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "description": "Bookbrainz IRC bot",
   "dependencies": {
+    "gitio": "^1.0.1",
     "hubot": "^2.12.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-github-repo-event-notifier": ">= 0.0.0",
@@ -13,8 +14,7 @@
     "hubot-irc": "^0.2.7",
     "hubot-redis-brain": "0.0.2",
     "hubot-rules": "^0.1.0",
-    "hubot-scripts": "^2.5.16",
-    "request": "^2.56.0"
+    "hubot-scripts": "^2.5.16"
   },
   "engines": {
     "node": "0.10.x"
