--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "hubot-irc": "^0.2.7",
     "hubot-redis-brain": "0.0.2",
     "hubot-rules": "^0.1.0",
-    "hubot-scripts": "^2.5.16"
+    "hubot-scripts": "^2.5.16",
+    "irc-colors": "^1.1.1",
+    "querystring": "^0.2.0",
+    "url": "^0.10.3"
   },
   "engines": {
     "node": "0.10.x"
