--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hubot-redis-brain": "0.0.2",
     "hubot-rules": "^0.1.0",
     "hubot-scripts": "^2.5.16",
+    "hubot-thank-you": "0.0.3",
     "irc-colors": "^1.1.1",
     "querystring": "^0.2.0",
     "url": "^0.10.3"
