--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "hubot-help": "^0.1.1",
     "hubot-heroku-keepalive": "0.0.4",
     "hubot-hipchat": "~2.5.1-5",
+    "hubot-http-status": "^0.2.1",
     "hubot-irc": "^0.2.7",
     "hubot-redis-brain": "0.0.2",
     "hubot-rules": "^0.1.0",
     "hubot-scripts": "^2.5.16",
     "hubot-thank-you": "0.0.3",
+    "hubot-travis-ci": "0.0.2",
     "irc-colors": "^1.1.1",
     "querystring": "^0.2.0",
     "url": "^0.10.3"
